--- a/src/components/MarkdownContent.astro
+++ b/src/components/MarkdownContent.astro
@@ -2,9 +2,9 @@
 import { marked } from 'marked';
 const { content } = Astro.props;
 
-// Преобразуем ![[image.jpg]] → <img src="/content/image.jpg" ...>
+// Преобразуем ![[image.jpg]] → <img src="/n0tes/content/image.jpg" ...>
 const processed = content.replace(/\!\[\[(.+?)\]\]/g, (_, filename) => {
-  return `<img src="/content/${filename}" alt="${filename}" />`;
+  return `<img src="/n0tes/content/${filename}" alt="${filename}" />`;
 });
 
 const html = marked.parse(processed);
