--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,17 +30,17 @@ const asciiArt = await fs.readFile(asciiPath, 'utf-8');
 
     <!-- LEFT PANEL LINKS -->
     <div class="link-panel">
-      <a href="/writeups" class="nav-link">writeups</a>
-      <a href="/notes" class="nav-link">notes</a>
-      <a href="/guides" class="nav-link">guides</a>
-      <a href="/other" class="nav-link">other</a>
+      <a href="/n0tes/writeups" class="nav-link">writeups</a>
+      <a href="/n0tes/notes" class="nav-link">notes</a>
+      <a href="/n0tes/guides" class="nav-link">guides</a>
+      <a href="n0tes/other" class="nav-link">other</a>
     </div>
 
     <!-- ABOUT WINDOW (СЛЕВА) -->
     <div class="about-window" id="about-window" style="top: 100px; left: 500px;">
       <div class="about-header" id="about-header">
         <div class="about-avatar">
-          <video src="/avatar.webm" autoplay muted loop playsinline></video>
+          <video src="/n0tes/avatar.webm" autoplay muted loop playsinline></video>
         </div>
         ABOUT
       </div>
@@ -62,7 +62,7 @@ You have reached my workspace.
       <div class="about-header" id="site-header">Have you seen this before?</div>
       <div class="about-content" style="padding: 0; height: 340px;">
         <video
-          src="/eye.webm"
+          src="/n0tes/eye.webm"
           autoplay
           muted
           loop
