--- a/src/pages/[section]/[slug].astro
+++ b/src/pages/[section]/[slug].astro
@@ -51,11 +51,11 @@ const markdown = await readFile(filePath, 'utf-8');
         <video class="sidebar-video" autoplay muted loop playsinline>
           <source src="/n0tes/1.webm" type="video/webm" />
         </video>
-        <a href="/" class="nav-link">Index</a>
-        <a href="/notes" class="nav-link">Notes</a>
-        <a href="/guides" class="nav-link">Guides</a>
-        <a href="/writeups" class="nav-link">Writeups</a>
-        <a href="/other" class="nav-link">Other</a>
+        <a href="/n0tes" class="nav-link">Index</a>
+        <a href="/n0tes/notes" class="nav-link">Notes</a>
+        <a href="/n0tes/guides" class="nav-link">Guides</a>
+        <a href="/n0tes/writeups" class="nav-link">Writeups</a>
+        <a href="/n0tes/other" class="nav-link">Other</a>
       </aside>
 
       <main class="page-wrapper">
