--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const asciiArt = await fs.readFile(asciiPath, 'utf-8');
       <a href="/n0tes/writeups" class="nav-link">writeups</a>
       <a href="/n0tes/notes" class="nav-link">notes</a>
       <a href="/n0tes/guides" class="nav-link">guides</a>
-      <a href="n0tes/other" class="nav-link">other</a>
+      <a href="/n0tes/other" class="nav-link">other</a>
     </div>
 
     <!-- ABOUT WINDOW (СЛЕВА) -->
